Fixed toggle prpblems

--- a/toggleLayersMap.html
+++ b/toggleLayersMap.html
@@ -99,7 +99,7 @@
         center: [-122.4194, 37.7749]
     });
 
-    var toggleableLayerIds = [ 'Medical Incidents', 'Structure Fires', 'Alarms','miscellaneous' ]; //layer ids to toggle MUST MATCH EXACTLY!
+    var toggleableLayerIds = [ 'medical-incident', 'structure-fires', 'alarms','miscellaneous' ]; //layer ids to toggle MUST MATCH EXACTLY!
 
     map.addControl(new MapboxGeocoder({
         accessToken: mapboxgl.accessToken
