added fields and style changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
                                         </div>
 
                                         <div class="level right">
-                                            <a href="https://www.trulia.com/real_estate/Hayes_Valley-San_Francisco/1417/crime/" class="button is-large is-outlined is-success">Real Estate Crime Data</a>
+                                            <a href="https://www.trulia.com/real_estate/Hayes_Valley-San_Francisco/1417/crime/" class="button is-large is-outlined is-success"> 
+                                            <span class="icon">
+                                                    <i class="fa fa-external-link-alt"></i>
+                                            </span> </a>
                                         </div>
                                     </div> 
                                     <br></br>
@@ -62,7 +65,10 @@
                                             </div>
 
                                         <div class="level right">
-                                                <a href="https://www.trulia.com/real_estate/South_San_Francisco-California/crime/" class="button is-large is-outlined is-success">Real Estate Crime Data</a>
+                                                <a href="https://www.trulia.com/real_estate/South_San_Francisco-California/crime/" class="button is-large is-outlined is-success">
+                                                <span class="icon">
+                                                        <i class="fa fa-external-link-alt"></i>
+                                                </span> </a>
                                         </div>
                                     </div>
                                     <br></br>
@@ -75,7 +81,10 @@
                                             </div>
 
                                         <div class="level right">
-                                                <a href="https://www.trulia.com/real_estate/Presidio-San_Francisco/1454/crime/" class="button is-large is-outlined is-success">Real Estate Crime Data</a>
+                                                <a href="https://www.trulia.com/real_estate/Presidio-San_Francisco/1454/crime/" class="button is-large is-outlined is-success">
+                                                <span class="icon">
+                                                        <i class="fa fa-external-link-alt"></i>
+                                                </span> </a>
                                         </div>
                                     </div> 
                                     <br></br>
@@ -86,7 +95,7 @@
                                     <div class="field">
                                             <label class="is-size-3 label">Street Address</label>
                                             <div class="control has-icons-left has-icons-right">
-                                              <input class="input is-success" type="text" placeholder="Street Address">
+                                              <input id="address" class="input is-success" type="text" placeholder="Street Address">
                                               <span class="icon is-small is-left">
                                                 <i class="fas fa-location-arrow"></i>
                                               </span>
@@ -100,7 +109,7 @@
                                           <div class="field">
                                             <label class="is-size-3 label">Zipcode</label>
                                             <div class="control has-icons-left has-icons-right">
-                                              <input class="input is-danger" type="email" placeholder="5 digit zipcode">
+                                              <input id="zipcode" class="input is-danger" type="email" placeholder="5 digit zipcode">
                                               <span class="icon is-small is-left">
                                                 <i class="fas fa-hashtag"></i>
                                               </span>
