added script tag for user input and button changes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!--Vue js for modal popups--> 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.15/dist/vue.js"></script> 
 
+
         <!--some basic CSS styling-->
         <style> 
             body{
@@ -45,7 +46,6 @@
                                             <i class="fa fa-map-marker"></i>
                                     </span>     Longest Dispatch Times by Zipcode</h1>
                                     <!--zipcode for longest dispatch areas--> 
-                                    <!--https://www.trulia.com/real_estate/Hayes_Valley-San_Francisco/1417/crime/--> <!--link to external data-->
                                     <div class="box level">
                                         <div class="level left">
                                                 <span class="icon">
@@ -53,7 +53,7 @@
                                                 </span>
                                             <h1 class="title is-3 is-spaced">Hayes Valley (94102)</h1>
                                         </div>
-
+                                        <!--link to external data-->
                                         <div class="level right">
                                             <a href="https://www.trulia.com/real_estate/Hayes_Valley-San_Francisco/1417/crime/" class="button is-large is-outlined is-success"> 
                                             <span class="icon">
@@ -74,7 +74,7 @@
                                                 <a href="https://www.trulia.com/real_estate/South_San_Francisco-California/crime/" class="button is-large is-outlined is-success">
                                                 <span class="icon">
                                                         <i class="fa fa-external-link-alt"></i>
-                                                </span> </a>
+                                                </span></a>
                                         </div>
                                     </div>
                                     <br></br>
@@ -99,7 +99,7 @@
                                             <i class="fa fa-check"></i>
                                     </span>     Check Your Area!</h1>
                                     <div class="field">
-                                            <label class="is-size-3 label">Street Address</label>
+                                             <label class="is-size-3 label">Street Address</label>
                                             <div class="control has-icons-left has-icons-right">
                                               <input id="address" class="input is-success" type="text" placeholder="Street Address">
                                               <span class="icon is-small is-left">
@@ -125,6 +125,8 @@
                                             </div>
                                             <!-- <p class="help is-danger">Enter valid zipcode</p> -->
                                           </div>
+                                
+                                 <script type="text/javascript" src="main.js"></script>
                             </div>
 
                             <div class="column is-centered">
