added zoom fix for browser

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
         <!--some basic CSS styling-->
         <style> 
+
             body{
                 background-color:#fffafa;
+                zoom: 67%;
         }
         </style> 
        
