minor front end changes

--- a/index.html
+++ b/index.html
@@ -67,14 +67,12 @@
                                                 <span class="icon">
                                                         <i class="fa fa-map-marker"></i>
                                                 </span>
-                                                <h1 class="title is-3 is-spaced">Hayes Valley (94102)</h1>
+                                                <h1 class="title is-3 is-spaced">Twin Peaks West (94127)</h1>
                                         </div>
                                         <!--link to external data-->
                                         <div class="level right">
-                                                <a href="https://www.trulia.com/real_estate/Hayes_Valley-San_Francisco/1417/crime/" class="button is-large is-outlined is-success"> 
-                                                <span class="icon">
-                                                        <i class="fa fa-external-link-alt"></i>
-                                                </span> </a>
+                                                <a href="https://www.trulia.com/real_estate/Twin_Peaks-San_Francisco/1470/crime//" class="button is-large is-outlined is-success"> 
+                                                        Thinking of real estate?</a>
                                         </div>
                                         </div> 
                                         <br></br>
@@ -88,9 +86,7 @@
 
                                         <div class="level right">
                                                 <a href="https://www.trulia.com/real_estate/South_San_Francisco-California/crime/" class="button is-large is-outlined is-success">
-                                                <span class="icon">
-                                                        <i class="fa fa-external-link-alt"></i>
-                                                </span></a>
+                                                        Thinking of real estate?</a>
                                         </div>
                                         </div>
                                         <br></br>
@@ -104,12 +100,11 @@
 
                                         <div class="level right">
                                                 <a href="https://www.trulia.com/real_estate/Presidio-San_Francisco/1454/crime/" class="button is-large is-outlined is-success">
-                                                <span class="icon">
-                                                        <i class="fa fa-external-link-alt"></i>
-                                                </span> </a>
+                                                Thinking of real estate? </a>
                                         </div>
                                         </div> 
-                                        
+                                        <hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
                                         <h1 class="title is-2">     <span class="icon">
                                                 <i class="fa fa-check"></i>
                                         </span>     <u>Check Your Area!</u></h1> 
@@ -148,9 +143,9 @@
                                                         <div class="message-header has-text-centered">
                                                                 <p>Call & Unit Type </p>
                                                         </div>
-                                                        <div id="get-type" class="message-body has-text-centered">
+                                                        <div id="get-type" class=" is-size-3 message-body has-text-centered">
                                                                 <strong>
-                                                                        
+
                                                                 </strong>
                                                         </div>
                                                 </article>
