--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                                         </div>
                                                 </div> 
 
-                                                <button id="check-area" class="button is-outlined is-info">Check Area</button>
+                                                <button id="check-area" class="button is-outlined is-info is-large">Check Area</button>
 
                                                 <br></br>
                                 </div>
@@ -179,6 +179,7 @@
                                                 </p>
                                         
                                         </div>
+                                        <hr style="height:1px;border:none;color:#333;background-color:#333;" />
                                         <article class="message is-info has-text-centered">
                                                 <div class="message-header has-text-centered">
                                                         <p>Call & Unit Type </p>
@@ -221,8 +222,8 @@
                                 </figure>
                         </div>
                         <div class="card-content">
-                                <div class="subtitle is-2">Hayes Valley (94102)</div>
-                                <p class="is-size-3">Dispatch Service: MEDIC, PRIVATE </p>
+                                <div class="subtitle is-2">Hayes Valley (94102) </div>
+                                <p class="is-size-3">Dispatch Service: MEDIC, PRIVATE  </p>
                         </div>
                 </div>
             </div>
