resized answer box

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                                 <p class="is-size-4">Twin Peaks West (94127) was seen to have the longest dispatch time 
                                                         out of all the zipcodes in the dataset. In fact, SFPD has already decided 
                                                         to increase patrols in this area after <i><a href="http://abc7news.com/news/sfpd-to-increase-patrols-at-twin-peaks-after-fatal-shooting/2229726/">
-                                                        a person was fatally shot in the area.</a></i>i To reduce reponse times for incidents like this, 
+                                                        a person was fatally shot in the area.</a></i> To reduce reponse times for incidents like this, 
                                                         SFPD should have more units in this area, as it is known to be a crime heavy location. 
                                                 </p>
                                                 
@@ -182,7 +182,7 @@
                                         <hr style="height:1px;border:none;color:#333;background-color:#333;" />
                                         <article class="message is-info has-text-centered">
                                                 <div class="message-header has-text-centered">
-                                                        <p>Call & Unit Type </p>
+                                                        <p class="is-size-4">Call & Unit Type </p>
                                                 </div>
                                                 <div id="get-type" class="is-size-3 message-body has-text-centered">
                                                         <strong>
