resized input field

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                         <div class="field">
                                                 <label class="is-size-3 label">Street Address</label>
                                                         <div class="control has-icons-left has-icons-right">
-                                                                <input id="address" class="input" type="text" placeholder="Street Address">
+                                                                <input id="address" class="is-size-4 input" type="text" placeholder="Street Address">
                                                                 <span class="icon is-small is-left">
                                                                 <i class="fas fa-location-arrow"></i>
                                                                 </span>
@@ -125,7 +125,7 @@
                                                 <div class="field">
                                                 <label class="is-size-3 label">Date & Time</label>
                                                         <div class="control has-icons-left has-icons-right">
-                                                                <input id="get-time" class="input" type="email" placeholder="e.g 2013-09-05 15:34:00">
+                                                                <input id="get-time" class="input is-size-4" type="email" placeholder="e.g 2013-09-05 15:34:00">
                                                                 <span class="icon is-small is-left">
                                                                 <i class="fas fa-clock"></i>
                                                                 </span>
