--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                                         <div class="box level"> 
                                               
-                                                <p class="is-size-4">Twin Peaks West (94127) was seen to have the longest dispatch time 
+                                                <p class="is-size-4">Twin Peaks West was seen to have the longest dispatch time 
                                                         out of all the zipcodes in the dataset. In fact, SFPD has already decided 
                                                         to increase patrols in this area after <i><a href="http://abc7news.com/news/sfpd-to-increase-patrols-at-twin-peaks-after-fatal-shooting/2229726/">
                                                         a person was fatally shot in the area.</a></i> To reduce reponse times for incidents like this, 
